fix: Color of lightmode

--- a/asmSim/index.css
+++ b/asmSim/index.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: black;
-    --background-color: #f0e0f7;
+    --background-color: white;
     --even-font: "Courier New";
     --uneven-font: "Arial";
 }
