--- a/asmSim/index.css
+++ b/asmSim/index.css
@@ -25,7 +25,7 @@ body {
 main {
     display: grid;
     grid-template-columns: repeat(2, 50vw);
-    grid-template-rows: repeat(2, 47.5vh);
+    grid-template-rows: repeat(2, 45.5vh);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     flex-grow: 1;
@@ -82,7 +82,7 @@ main {
 #header {
     display: block;
     width: 100vw;
-    height: 5vh;
+    height: 4vh;
     background-color: rgb(29, 29, 29);
     color: white;
 }
@@ -121,6 +121,7 @@ main {
     max-width: 100%;
     min-height: 50%;
 }
+
 #assembleButton {
     float: right;
 }
@@ -212,4 +213,72 @@ sasm-checkbox[checked="true"]::before {
     float: right;
     font-size: 1.2em;
     margin-right: 2em;
+}
+
+#outerEditor {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+#editor {
+    height: 90%;
+    border: 1px solid #ccc;
+    width: 20em;
+    flex-grow: 1;
+}
+.asmPreview {
+    width: 20em;
+    height: 90%;
+    display: flex;
+}
+.hidden {
+    display: none;
+}
+#menuBar {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 1vh;
+    background-color: rgb(29, 29, 29);
+    color: white;
+}
+.menuBarItem {
+    display: flex;
+    width: 5vw;
+    height: 1vh;
+    cursor: pointer;
+    border-radius: 0;
+    padding: 0;
+    margin: 0;
+    border-width: 0px;
+    background-color: transparent;
+    color: white;
+}
+.menuBarItem:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.contextMenu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+    background-color: #ccc;
+    color: black;
+    padding: 0.5em;
+    min-width: 5vw;
+}
+.contextMenuItem {
+    cursor: pointer;
+    min-width: 5vw;
+}
+.contextMenuItem:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.hint {
+    font-size: 0.5em;
+}
+#settingsA {
+    position: absolute;
+    top: 0;
+    left: 3em;
 }
