--- a/asmSim/index.css
+++ b/asmSim/index.css
@@ -138,7 +138,7 @@ main {
     font-weight: bold;
 }
 #cpuImg {
-    height: 100%;
+    height: 95%;
 }
 #openFile {
     border-style: solid;
@@ -281,4 +281,30 @@ sasm-checkbox[checked="true"]::before {
     position: absolute;
     top: 0;
     left: 3em;
+}
+#cpuMessageBox[data-status="none"]{
+    display: none;
+}
+#cpuMessageBox[data-status="error"]{
+    display:  block;
+    background-color: rgba(255,0,0,0.5);
+}
+#cpuMessageBox[data-status="warn"]{
+    display:  block;
+    background-color: rgba(255,255,0,0.5);
+}
+
+#cpuMessageBox[data-status="fine"]{
+    display:  block;
+    background-color: rgba(0,255,0,0.5);
+}
+#cpuMessageBox{
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    margin-inline: 1em;
+    padding-inline: 1em;
+    padding-top: 0.3em;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    height: 5%;
 }
