--- a/asmSim/index.css
+++ b/asmSim/index.css
@@ -153,8 +153,14 @@ main {
 }
 #darkmodeContainer {
     float: right;
-    width: fit-content;
-    height: fit-content;
+}
+#langLink {
+    float: right;
+    vertical-align: middle;
+    color: white;
+}
+#langLink:visited {
+    color: white;
 }
 sasm-checkbox {
     width: 1em;
@@ -282,29 +288,35 @@ sasm-checkbox[checked="true"]::before {
     top: 0;
     left: 3em;
 }
-#cpuMessageBox[data-status="none"]{
+#cpuMessageBox[data-status="none"] {
     display: none;
 }
-#cpuMessageBox[data-status="error"]{
-    display:  block;
-    background-color: rgba(255,0,0,0.5);
+#cpuMessageBox[data-status="error"] {
+    display: block;
+    background-color: rgba(255, 0, 0, 0.5);
 }
-#cpuMessageBox[data-status="warn"]{
-    display:  block;
-    background-color: rgba(255,255,0,0.5);
+#cpuMessageBox[data-status="warn"] {
+    display: block;
+    background-color: rgba(255, 255, 0, 0.5);
 }
 
-#cpuMessageBox[data-status="fine"]{
-    display:  block;
-    background-color: rgba(0,255,0,0.5);
+#cpuMessageBox[data-status="fine"] {
+    display: block;
+    background-color: rgba(0, 255, 0, 0.5);
 }
-#cpuMessageBox{
+#cpuMessageBox {
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     margin-inline: 1em;
     padding-inline: 1em;
     padding-top: 0.3em;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     height: 5%;
+}
+asm-code {
+    background-color: rgba(0, 0, 0, 0.3);
+    font-family: "Courier New", Courier, monospace;
+    border-style: solid;
+    border-width: 1px;
 }
